# ctf

./: README.md  localsetup.py  pyproject.toml  setupvenv.py  template_default.py  template_math.py  template_util.py
src/ctf/: __init__.py  setup_venv.py  template_default.py  template_math.py  template_util.py
